example/src/main/deploy/artemis-deployment.yml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  labels:
    app: amqp-messaging-network
    version: "${project.version}"
    group: ${project.groupId}
  name: hono-artemis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: amqp-messaging-network
      role: broker
      group: ${project.groupId}
  template:
    metadata:
      labels:
        app: amqp-messaging-network
        role: broker
        version: "${project.version}"
        group: ${project.groupId}
    spec:
      containers:
      - command:
        - /opt/artemis/bin/artemis
        - run
        - xml:/etc/hono/artemis-bootstrap.xml
        image: ${artemis.image.name}
        imagePullPolicy: IfNotPresent
        livenessProbe:
          initialDelaySeconds: 20
          periodSeconds: 9
          tcpSocket:
            port: 5671
          timeoutSeconds: 1
        name: apache-activemq-artemis
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 5
          tcpSocket:
            port: 5671
          timeoutSeconds: 1
        securityContext:
          privileged: false
        volumeMounts:
        - mountPath: /etc/hono
          name: config
          readOnly: true
      volumes:
      - name: config
        secret:
          secretName: hono-artemis-conf
