example/src/main/deploy/dispatch-router-deployment.yml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  labels:
    app: amqp-messaging-network
    version: "${project.version}"
    group: ${project.groupId}
  name: hono-dispatch-router
spec:
  replicas: 1
  selector:
    matchLabels:
      app: amqp-messaging-network
      role: router
      group: ${project.groupId}
  template:
    metadata:
      labels:
        app: amqp-messaging-network
        role: router
        version: "${project.version}"
        group: ${project.groupId}
    spec:
      containers:
      - command:
        - /sbin/qdrouterd
        - -c
        - /etc/hono/qdrouterd-with-broker.json
        image: ${dispatch-router.image.name}
        imagePullPolicy: IfNotPresent
        livenessProbe:
          initialDelaySeconds: 180
          periodSeconds: 9
          tcpSocket:
            port: 5672
          timeoutSeconds: 1
        name: apache-qpid-dispatch-router
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          tcpSocket:
            port: 5672
          timeoutSeconds: 1
        securityContext:
          privileged: false
        volumeMounts:
        - mountPath: /etc/hono
          name: config
          readOnly: true
      volumes:
      - name: config
        secret:
          secretName: hono-dispatch-router-conf
