example/src/main/deploy/grafana-deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: hono-metrics
    version: "${project.version}"
    group: ${project.groupId}
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hono-metrics
      role: grafana
      group: ${project.groupId}
  template:
    metadata:
      labels:
        app: hono-metrics
        role: grafana
        version: "${project.version}"
        group: ${project.groupId}
    spec:
      containers:
      - name: grafana
        image: ${docker.image.org-name}/hono-grafana:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 9
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 1
        securityContext:
          privileged: false
        volumeMounts:
        - mountPath: /var/log/grafana
          name: grafana-logs
        - mountPath: /var/lib/grafana
          name: grafana-data
        - mountPath: /var/lib/grafana-external/dashboards
          name: grafana-external-dashboards
      volumes:
      - emptyDir: {}
        name: grafana-logs
      - emptyDir: {}
        name: grafana-data
      - name: grafana-external-dashboards
        configMap:
          name: grafana-dashboards
