example/src/main/deploy/prometheus-deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: hono-metrics
    version: "${project.version}"
    group: ${project.groupId}
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hono-metrics
      role: influxdb
      group: ${project.groupId}
  template:
    metadata:
      labels:
        app: hono-metrics
        role: influxdb
        version: "${project.version}"
        group: ${project.groupId}
    spec:
      serviceAccountName: prometheus-sa
      containers:
      - name: prometheus
        image: ${prometheus.image.name}
        imagePullPolicy: IfNotPresent
        command:
        - /bin/prometheus
        args:
        - --config.file=/etc/prometheus/prometheus.yml
        - --storage.tsdb.path=/prometheus
        - --storage.tsdb.retention=24h
        ports:
        - containerPort: 9090
          protocol: TCP
        resources:
          requests:
            memory: 256Mi
          limits:
            memory: 1Gi
        volumeMounts:
        - mountPath: /prometheus
          name: data
        - mountPath: /etc/prometheus
          name: config
      volumes:
      - name: config
        configMap:
          name: prometheus-conf
      - name: data
        emptyDir: {}
