example/src/main/deploy/artemis-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: AMQP_Messaging_Network
    version: "${project.version}"
    group: ${project.groupId}
  name: hono-artemis
spec:
  ports:
  - port: 5671
    protocol: TCP
    targetPort: 5671
  selector:
    role: broker
    app: AMQP_Messaging_Network
    group: ${project.groupId}
