example/src/main/deploy/dispatch-router-ext-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: AMQP_Messaging_Network
    version: "${project.version}"
    group: ${project.groupId}
  name: hono-dispatch-router-ext
spec:
  ports:
  - name: amqps
    nodePort: 30671
    port: 5671
    protocol: TCP
    targetPort: 5671
  - name: amqp
    nodePort: 30672
    port: 5672
    protocol: TCP
    targetPort: 5672
  selector:
    role: router
    app: AMQP_Messaging_Network
    group: ${project.groupId}
  type: NodePort
