example/src/main/deploy/dispatch-router-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: AMQP_Messaging_Network
    version: "${project.version}"
    group: ${project.groupId}
  name: hono-dispatch-router
spec:
  ports:
  - port: 5673
    protocol: TCP
    targetPort: 5673
  selector:
    role: router
    app: AMQP_Messaging_Network
    group: ${project.groupId}
