example/src/main/deploy/prometheus-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hono-metrics
    version: "${project.version}"
    group: ${project.groupId}
  name: prometheus
spec:
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    role: influxdb
    app: hono-metrics
    group: ${project.groupId}
