example/src/main/deploy/dispatch-router-route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: AMQP_Messaging_Network
    version: "${project.version}"
    group: ${project.groupId}
  name: hono-dispatch-router
spec:
  port:
    targetPort: 5671
  tls:
    termination: passthrough
  to:
    kind: Service
    name: hono-dispatch-router-ext
